# project-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/cheatsheets/: docker-commands.md  git-commands.md
docs/issues/: create_issue.py
docs/issues/epics/: ci-cd-pipeline-setup.md
docs/issues/features/: backend-test-setup.md  frontend-test-implementation.md  issue-management-cleanup.md
docs/issues/templates/: debug-session-template.md  epic-template.md  feature-template.md
docs/utilities/: setup_docs.md  setup_docs.py
docs/utilities/debug_management/: github_logger.py
docs/utilities/github/: create_lables.py
