[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-template"
version = "0.1.0"
authors = [
  { name="DBonbon", email="yrfriedman@gmail.com" },
]
description = "A template for Python projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DBonbon/project-template"
"Bug Tracker" = "https://github.com/DBonbon/project-template/issues"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3